--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@ colors 7e0a5c (deep earth red) 22eedd (original flores blue)
 	1. Body
 --------------------------------------------------------------------------*/
 
-@import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
+/*@import url('https://fonts.googleapis.com/css?family=Cutive+Mono');*/
 
 body {
 	color: #111;
-	font-family: 'Cutive Mono', monospace;
+	font-family: "Andale Mono", AndaleMono, monospace;
 	font-size: 15px;
 	line-height: 28px;
 	letter-spacing: .04em;
@@ -326,8 +326,8 @@ b, strong { font-weight: bold; }
 	.page p.page-desc {
 		color: #222;
 		/*font-family: 'Roboto Slab', Georgia, serif;*/
-		font-size: 21px;
-		line-height: 36px;
+		font-size: 18px;
+		line-height: 30px;
 		font-weight: 300;
 		margin-top: 20px;
 		margin-bottom: 30px;
