--- a/css/style.css
+++ b/css/style.css
@@ -81,18 +81,21 @@ a:visited {
 	outline: 0;
 }
 
-a:visited#show {
-	color: #992266;
-	text-decoration: none;
-	outline: 0;
-}
-
 a:hover,
 a:focus { color: #b54646; }
 p a,
 p a:visited { line-height: inherit; }
 
 
+a:visited#show, a#show{
+	color: #992266 !important;;
+
+}
+
+a:hover#show, a:focus#show {
+	color: #f54676 !important;;
+
+}
 
 /* Visibility */
 .hide { display: none !important; }
