--- a/css/style.css
+++ b/css/style.css
@@ -855,7 +855,7 @@ b, strong { font-weight: bold; }
 	}
 
 		#works.single img {
-			margin-bottom: 60px;
+			margin-top: 30px;
 		}
 
 		#works.single .box-info {
