update about and mob css

--- a/css/style.css
+++ b/css/style.css
@@ -792,6 +792,11 @@ ul#nav>li ul ul {
 	}
 }
 
+.shows p {
+	/* margin: 0px 0px -17px 0px; */
+	margin-bottom: -12px;
+}
+
 /*---------------------------------------------------
 			3.5 Works
 	---------------------------------------------------*/
