--- a/about-zizi/tailwind.css
+++ b/about-zizi/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a {
+    @apply text-fuchsia-500 hover:underline visited:text-fuchsia-700
+ }
+ 
